--- a/index.html
+++ b/index.html
@@ -25,39 +25,43 @@
     .hero{
       position:relative;overflow:hidden;text-align:center;color:#fff;
       background:linear-gradient(150deg,#c4122f 0%,#8a0d21 100%);
-      padding:clamp(3.2rem,7vw,5rem) 1rem 3.2rem;
+      padding:clamp(2.6rem,6vw,4.6rem) 1rem 2.6rem;
     }
     .hero::after{
       content:"";position:absolute;right:-110px;top:-70px;width:520px;height:520px;
       background:url("assets/images/translogo.png") center/contain no-repeat;opacity:.08;mix-blend-mode:overlay;filter:brightness(1.1)
     }
     .hero-inner{position:relative;z-index:1;max-width:820px;margin:0 auto}
-    .hero h1{margin:0 0 .8rem;font-size:clamp(2.2rem,5vw,3.6rem);font-weight:900;letter-spacing:.01em}
-    .hero p{max-width:560px;margin:.2rem auto 1.6rem;color:rgba(255,255,255,.92);line-height:1.55}
+    .hero h1{margin:0 0 .7rem;font-size:clamp(2.1rem,4.8vw,3.4rem);font-weight:900;letter-spacing:.01em}
+    .hero p{max-width:560px;margin:.2rem auto 1.4rem;color:rgba(255,255,255,.92);line-height:1.55}
     .btn-row{display:flex;justify-content:center;gap:.9rem;flex-wrap:wrap}
     .btn{display:inline-block;border-radius:999px;padding:.85rem 1.3rem;font-weight:800;font-size:1rem;text-decoration:none;transition:.18s}
     .btn-white{background:#fff;color:var(--scarlet)}
     .btn-outline{border:2px solid #fff;color:#fff}
     .btn:hover{transform:translateY(-2px);filter:brightness(1.05)}
 
-    /* Sections */
-    .section{max-width:1100px;margin:0 auto;padding:3rem 1rem 3.5rem}
-    .section h2{font-size:1.8rem;text-align:center;margin:0 0 2rem;font-weight:900}
+    /* Sections wrapper */
+    .section{max-width:1100px;margin:0 auto;padding:2.6rem 1rem 3.2rem}
+    .section h2{font-size:1.85rem;text-align:center;margin:0 0 1.8rem;font-weight:900}
 
-    /* Features */
-    .features{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:1.4rem}
-    .feature{background:var(--panel);border-radius:18px;padding:1.5rem;box-shadow:0 6px 24px rgba(0,0,0,.08);transition:.22s}
-    .feature:hover{transform:translateY(-4px);box-shadow:0 12px 32px rgba(0,0,0,.12)}
-    .feature h3{margin:0 0 .4rem;font-weight:900}
-    .feature p{margin:0;color:var(--muted);line-height:1.45}
-    .center{display:flex;justify-content:center;margin-top:2rem}
+    /* Education-first “What we teach” */
+    .edu-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:1.2rem}
+    .edu-card{background:var(--panel);border-radius:20px;padding:1.35rem 1.25rem 1.4rem;box-shadow:0 8px 26px rgba(0,0,0,.1);transition:.2s}
+    .edu-card:hover{transform:translateY(-3px);box-shadow:0 14px 34px rgba(0,0,0,.14)}
+    .tag{display:inline-block;font-size:.78rem;font-weight:800;letter-spacing:.02em;background:#f1f1f1;color:#333;border-radius:999px;padding:.28rem .6rem;margin-bottom:.55rem}
+    .edu-card h3{margin:.15rem 0 .35rem;font-size:1.15rem;font-weight:900}
+    .edu-card p{margin:0;color:var(--muted);line-height:1.5}
+    .tiny-list{margin:.6rem 0 0 1rem;padding:0;color:#545454;line-height:1.35}
+    .center{display:flex;justify-content:center;margin-top:1.6rem}
+    .btn-gray{border:2px solid #e6e6e6;color:#222;background:#fff}
+    .btn-gray:hover{background:#fafafa}
 
-    /* Next Event (revamped) */
+    /* Next Event */
     .next-wrap{
       background:linear-gradient(180deg,#ffffff 0%,#f3f3f3 100%);
-      border-top:1px solid #eee;padding:3rem 1rem 4rem
+      border-top:1px solid #eee;padding:2.8rem 1rem 3.6rem
     }
-    .next-wrap h2{text-align:center;font-size:1.8rem;font-weight:900;margin:0 0 1.6rem}
+    .next-wrap h2{text-align:center;font-size:1.85rem;font-weight:900;margin:0 0 1.4rem}
     .event-card{
       position:relative;background:var(--panel);max-width:760px;margin:0 auto;padding:2rem 1.6rem 2.1rem;
       border-radius:22px;box-shadow:0 14px 38px rgba(0,0,0,.12)
@@ -110,29 +114,58 @@
     </div>
   </section>
 
-  <!-- WHAT WE DO -->
+  <!-- EDUCATION-FOCUSED SECTION -->
   <section class="section">
-    <h2>What we do</h2>
-    <div class="features">
-      <article class="feature">
-        <h3>Strategy Lab</h3>
-        <p>Backtesting, journal review, and Q&amp;A together to make process repeatable.</p>
+    <h2>What we teach</h2>
+
+    <div class="edu-grid">
+      <article class="edu-card">
+        <span class="tag">Foundations</span>
+        <h3>Market Basics & Platforms</h3>
+        <p>New to markets? We start with order types, market structure, timeframes, and platform setup so beginners can actually place clean, intentional trades.</p>
+        <ul class="tiny-list">
+          <li>Order flow, liquidity, and levels</li>
+          <li>Paper trading and journaling 101</li>
+        </ul>
       </article>
-      <article class="feature">
-        <h3>Risk &amp; Process</h3>
-        <p>Position sizing, stop logic, and pre/post-trade checklists that keep you sane.</p>
+
+      <article class="edu-card">
+        <span class="tag">Strategies</span>
+        <h3>High-probability Setups</h3>
+        <p>Repeatable intraday strategies designed to be taught and verified: opening drive, pullback to VWAP, liquidity sweep, and range break retests.</p>
+        <ul class="tiny-list">
+          <li>Entry triggers and invalidations</li>
+          <li>Pre/post-trade checklists</li>
+        </ul>
       </article>
-      <article class="feature">
-        <h3>Speakers &amp; Workshops</h3>
-        <p>Traders, quants, and builders sharing real lessons, not highlight reels.</p>
+
+      <article class="edu-card">
+        <span class="tag">Risk</span>
+        <h3>Position Sizing & Process</h3>
+        <p>How much to risk, where to place stops, and how to scale. We prioritize survival math over hero trades so you can learn without nuking an account.</p>
+        <ul class="tiny-list">
+          <li>Fixed-fraction vs. ATR sizing</li>
+          <li>Daily loss limits and review cadence</li>
+        </ul>
+      </article>
+
+      <article class="edu-card">
+        <span class="tag">Practice</span>
+        <h3>Strategy Lab & Reviews</h3>
+        <p>We backtest together, run live paper sessions, and hold weekly debriefs to turn notes into muscle memory.</p>
+        <ul class="tiny-list">
+          <li>Group backtests and dashboards</li>
+          <li>Journal audits and accountability</li>
+        </ul>
       </article>
     </div>
+
     <div class="center">
-      <a class="btn btn-outline" href="resources.html">View resources</a>
+      <a class="btn btn-gray" href="resources.html">Explore the learning path</a>
     </div>
   </section>
 
-  <!-- NEXT UPCOMING EVENT (compact, centered card) -->
+  <!-- NEXT UPCOMING EVENT -->
   <section class="next-wrap">
     <h2>Next upcoming event</h2>
     <div class="event-card">
