--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     .hero{
       position:relative;overflow:hidden;text-align:center;color:#fff;
       background:linear-gradient(150deg,#c4122f 0%,#8a0d21 100%);
-      padding:clamp(2.6rem,6vw,4.6rem) 1rem 2.6rem;
+      padding:clamp(2.2rem,5.2vw,3.8rem) 1rem 2.2rem;
     }
     .hero::after{
       content:"";position:absolute;right:-110px;top:-70px;width:520px;height:520px;
       background:url("assets/images/translogo.png") center/contain no-repeat;opacity:.08;mix-blend-mode:overlay;filter:brightness(1.1)
     }
     .hero-inner{position:relative;z-index:1;max-width:820px;margin:0 auto}
-    .hero h1{margin:0 0 .7rem;font-size:clamp(2.1rem,4.8vw,3.4rem);font-weight:900;letter-spacing:.01em}
-    .hero p{max-width:560px;margin:.2rem auto 1.4rem;color:rgba(255,255,255,.92);line-height:1.55}
+    .hero h1{margin:0 0 .7rem;font-size:clamp(2rem,4.6vw,3.2rem);font-weight:900;letter-spacing:.01em}
+    .hero p{max-width:560px;margin:.2rem auto 1.25rem;color:rgba(255,255,255,.92);line-height:1.55}
     .btn-row{display:flex;justify-content:center;gap:.9rem;flex-wrap:wrap}
     .btn{display:inline-block;border-radius:999px;padding:.85rem 1.3rem;font-weight:800;font-size:1rem;text-decoration:none;transition:.18s}
     .btn-white{background:#fff;color:var(--scarlet)}
@@ -41,29 +41,29 @@
     .btn:hover{transform:translateY(-2px);filter:brightness(1.05)}
 
     /* Sections wrapper */
-    .section{max-width:1100px;margin:0 auto;padding:2.6rem 1rem 3.2rem}
-    .section h2{font-size:1.85rem;text-align:center;margin:0 0 1.8rem;font-weight:900}
+    .section{max-width:1100px;margin:0 auto;padding:2.2rem 1rem 3rem}
+    .section h2{font-size:1.85rem;text-align:center;margin:0 0 1.6rem;font-weight:900}
 
     /* Education-first “What we teach” */
-    .edu-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:1.2rem}
-    .edu-card{background:var(--panel);border-radius:20px;padding:1.35rem 1.25rem 1.4rem;box-shadow:0 8px 26px rgba(0,0,0,.1);transition:.2s}
+    .edu-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:1.1rem}
+    .edu-card{background:var(--panel);border-radius:20px;padding:1.2rem 1.15rem 1.3rem;box-shadow:0 8px 26px rgba(0,0,0,.1);transition:.2s}
     .edu-card:hover{transform:translateY(-3px);box-shadow:0 14px 34px rgba(0,0,0,.14)}
-    .tag{display:inline-block;font-size:.78rem;font-weight:800;letter-spacing:.02em;background:#f1f1f1;color:#333;border-radius:999px;padding:.28rem .6rem;margin-bottom:.55rem}
-    .edu-card h3{margin:.15rem 0 .35rem;font-size:1.15rem;font-weight:900}
+    .tag{display:inline-block;font-size:.78rem;font-weight:800;letter-spacing:.02em;background:#f1f1f1;color:#333;border-radius:999px;padding:.28rem .6rem;margin-bottom:.5rem}
+    .edu-card h3{margin:.1rem 0 .3rem;font-size:1.12rem;font-weight:900}
     .edu-card p{margin:0;color:var(--muted);line-height:1.5}
-    .tiny-list{margin:.6rem 0 0 1rem;padding:0;color:#545454;line-height:1.35}
-    .center{display:flex;justify-content:center;margin-top:1.6rem}
-    .btn-gray{border:2px solid #e6e6e6;color:#222;background:#fff}
+    .tiny-list{margin:.55rem 0 0 1rem;padding:0;color:#545454;line-height:1.35}
+    .center{display:flex;justify-content:center;margin-top:1.4rem}
+    .btn-gray{border:2px solid #e6e6e6;color:#222;background:#fff;border-radius:999px;padding:.8rem 1.1rem;font-weight:800;text-decoration:none}
     .btn-gray:hover{background:#fafafa}
 
     /* Next Event */
     .next-wrap{
       background:linear-gradient(180deg,#ffffff 0%,#f3f3f3 100%);
-      border-top:1px solid #eee;padding:2.8rem 1rem 3.6rem
+      border-top:1px solid #eee;padding:2.4rem 1rem 3.2rem
     }
-    .next-wrap h2{text-align:center;font-size:1.85rem;font-weight:900;margin:0 0 1.4rem}
+    .next-wrap h2{text-align:center;font-size:1.85rem;font-weight:900;margin:0 0 1.2rem}
     .event-card{
-      position:relative;background:var(--panel);max-width:760px;margin:0 auto;padding:2rem 1.6rem 2.1rem;
+      position:relative;background:var(--panel);max-width:760px;margin:0 auto;padding:1.8rem 1.5rem 1.9rem;
       border-radius:22px;box-shadow:0 14px 38px rgba(0,0,0,.12)
     }
     .event-card::before{
@@ -71,17 +71,17 @@
       background:radial-gradient(1200px 200px at 50% 0,rgba(196,18,47,.12),transparent 60%)
     }
     .pill{display:inline-block;background:var(--scarlet);color:#fff;font-weight:900;font-size:.85rem;padding:.38rem 1rem;border-radius:999px}
-    .event-title{margin:.6rem 0 1rem;font-size:1.4rem;font-weight:900;text-align:center}
-    .meta-list{display:grid;gap:.5rem;margin:0 auto 1rem;padding:0;max-width:520px}
+    .event-title{margin:.55rem 0 .9rem;font-size:1.35rem;font-weight:900;text-align:center}
+    .meta-list{display:grid;gap:.45rem;margin:0 auto .9rem;padding:0;max-width:520px}
     .meta-row{display:flex;gap:.5rem;justify-content:center;flex-wrap:wrap;color:#333}
     .meta-row b{font-weight:800}
-    .desc{max-width:620px;margin:.3rem auto 1.1rem;text-align:center;color:#444}
-    .event-actions{display:flex;justify-content:center;gap:.8rem;flex-wrap:wrap}
-    .btn-red{background:var(--scarlet);color:#fff}
-    .btn-ghost{border:2px solid #e5e5e5;color:#222;background:#fff}
+    .desc{max-width:620px;margin:.2rem auto 1rem;text-align:center;color:#444}
+    .event-actions{display:flex;justify-content:center;gap:.75rem;flex-wrap:wrap}
+    .btn-red{background:var(--scarlet);color:#fff;border-radius:999px;padding:.85rem 1.15rem;font-weight:800;text-decoration:none}
+    .btn-ghost{border:2px solid #e5e5e5;color:#222;background:#fff;border-radius:999px;padding:.82rem 1.1rem;font-weight:800;text-decoration:none}
 
     /* Footer */
-    footer{background:#121212;color:#fff;text-align:center;padding:1.3rem 1rem;font-size:.92rem}
+    footer{background:#121212;color:#fff;text-align:center;padding:1.1rem 1rem;font-size:.92rem}
   </style>
 </head>
 <body>
@@ -122,7 +122,7 @@
       <article class="edu-card">
         <span class="tag">Foundations</span>
         <h3>Market Basics & Platforms</h3>
-        <p>New to markets? We start with order types, market structure, timeframes, and platform setup so beginners can actually place clean, intentional trades.</p>
+        <p>Order types, market structure, timeframes, and platform setup so beginners can place clean, intentional trades.</p>
         <ul class="tiny-list">
           <li>Order flow, liquidity, and levels</li>
           <li>Paper trading and journaling 101</li>
@@ -132,7 +132,7 @@
       <article class="edu-card">
         <span class="tag">Strategies</span>
         <h3>High-probability Setups</h3>
-        <p>Repeatable intraday strategies designed to be taught and verified: opening drive, pullback to VWAP, liquidity sweep, and range break retests.</p>
+        <p>Opening drive, pullback to VWAP, liquidity sweep, and range-break retests with clear rules and invalidations.</p>
         <ul class="tiny-list">
           <li>Entry triggers and invalidations</li>
           <li>Pre/post-trade checklists</li>
@@ -142,20 +142,40 @@
       <article class="edu-card">
         <span class="tag">Risk</span>
         <h3>Position Sizing & Process</h3>
-        <p>How much to risk, where to place stops, and how to scale. We prioritize survival math over hero trades so you can learn without nuking an account.</p>
+        <p>How much to risk, where to place stops, and how to scale. Survival math over hero trades.</p>
         <ul class="tiny-list">
-          <li>Fixed-fraction vs. ATR sizing</li>
-          <li>Daily loss limits and review cadence</li>
+          <li>Fixed-fraction vs ATR sizing</li>
+          <li>Daily loss limits & review cadence</li>
         </ul>
       </article>
 
       <article class="edu-card">
         <span class="tag">Practice</span>
         <h3>Strategy Lab & Reviews</h3>
-        <p>We backtest together, run live paper sessions, and hold weekly debriefs to turn notes into muscle memory.</p>
+        <p>Backtests, live paper sessions, and weekly debriefs to turn notes into muscle memory.</p>
         <ul class="tiny-list">
           <li>Group backtests and dashboards</li>
           <li>Journal audits and accountability</li>
+        </ul>
+      </article>
+
+      <article class="edu-card">
+        <span class="tag">Options</span>
+        <h3>Options Basics & Risk</h3>
+        <p>Greeks, premium decay, and how to avoid dumb lottery-ticket trades. Simple, hedge-aware plays only.</p>
+        <ul class="tiny-list">
+          <li>Defined-risk vs. undefined-risk</li>
+          <li>When NOT to trade options</li>
+        </ul>
+      </article>
+
+      <article class="edu-card">
+        <span class="tag">Tools</span>
+        <h3>Data, Journals & Dashboards</h3>
+        <p>Build a personal edge database: logs, tags, and stats that actually change behavior.</p>
+        <ul class="tiny-list">
+          <li>Review templates and KPIs</li>
+          <li>Automation ideas and exports</li>
         </ul>
       </article>
     </div>
